sub_err_utf8.txt
============================= test session starts =============================
platform win32 -- Python 3.12.3, pytest-9.0.2, pluggy-1.6.0 -- C:\Users\kaneko yu\AppData\Local\Programs\Python\Python312\python.exe
cachedir: .pytest_cache
rootdir: C:\Users\kaneko yu\Documents\jarvis-work\jarvis-ml-pipeline
configfile: pytest.ini (WARNING: ignoring pytest config in pyproject.toml!)
collecting ... collected 0 items / 1 error

=================================== ERRORS ====================================
______________ ERROR collecting tests/test_submission_format.py _______________
..\..\..\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
..\..\..\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
..\..\..\AppData\Local\Programs\Python\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
..\..\..\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\test_submission_format.py:7: in <module>
    from pipelines.tabular.submission import make_submission, validate_submission
pipelines\tabular\__init__.py:13: in <module>
    from .metrics import calculate_metrics
E     File "C:\Users\kaneko yu\Documents\jarvis-work\jarvis-ml-pipeline\pipelines\tabular\metrics.py", line 14
E       from sklearn.metrics import accuracy_score,
E                                                  ^
E   SyntaxError: trailing comma not allowed without surrounding parentheses
=========================== short test summary info ===========================
ERROR tests/test_submission_format.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
==================== no tests collected, 1 error in 0.98s =====================
